# Backend/docs/classes/swagger.json
@@ -386,6 +386,9 @@
                 "password": {
                     "type": "string"
                 },
+                "profile_picture": {
+                    "type": "string"
+                },
                 "updated_at": {
                     "type": "string"
                 },
@@ -396,6 +399,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "\"Enter the token with the `Bearer ` prefix, e.g., `Bearer \u003ctoken\u003e`\"",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
